<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@color/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgy"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewAppName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/maxter"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/so_blue"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgx"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewTemperatureLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/maxter"
                    android:text="@string/temperature_label"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageViewTemperatureIcon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/temperature_icon"
                    app:srcCompat="@drawable/temperature_icon" />

                <TextView
                    android:id="@+id/textViewTemperatureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:fontFamily="@font/maxter"
                    android:padding="8dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgx"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewHumidityLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/maxter"
                    android:text="@string/humidity_label"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageViewHumidityIcon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/humidity_icon"
                    app:srcCompat="@drawable/humidity_icon" />

                <TextView
                    android:id="@+id/textViewHumidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:fontFamily="@font/maxter"
                    android:padding="8dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bgx"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewPressureLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/maxter"
                    android:text="@string/pressure_label"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageViewPressureIcon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/pressure_icon"
                    app:srcCompat="@drawable/pressure_icon" />

                <TextView
                    android:id="@+id/textViewPressureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="10"
                    android:fontFamily="@font/maxter"
                    android:padding="8dp"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:id="@+id/buttonSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_bgcolor_settings"
                    android:fontFamily="@font/maxter"
                    android:onClick="show_settings"
                    android:text="@string/settings_label"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
